# tinyrenderer

./: CMakeLists.txt  Makefile  buildDebug.bat  buildDebug.sh  config.h.in  macBuildDebug.sh  main.cpp
src/: geometry.h  main.cpp  model.cpp  model.h  tgaimage.cpp
